Fix force submodule

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         extended: true
     - name: Deploy to Surge
       run: |
-        git submodule add --depth 1 https://github.com/mivinci/hugo-theme-minima.git themes/minima
+        git submodule add --depth 1 -f https://github.com/mivinci/hugo-theme-minima.git themes/minima
         hugo
         npx surge ./public ${{secrets.surge_domain}} --token ${{secrets.surge_token}}
     - name: Deploy to VPS
